<?xml version="1.0"?>
<package>
  <name>abb_librws</name>
  <version>1.0.0</version>
  <description>The abb_librws package for easing the use of ABB Robot Web Services (RWS) feature</description>

  <maintainer email="jon.tjerngren@se.abb.com">Jon Tjerngren</maintainer>

  <license>BSD 3-Clause</license>

  <author email="jon.tjerngren@se.abb.com">Jon Tjerngren</author>

  <url type="repository">https://github.com/ros-industrial/abb_librws</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend version_gte="1.4.3">libpoco-dev</build_depend>
</package>
